tests/testcases/invalid/semantic/18_while_condition_not_bool.ciel
// Error: while condition must be of type 'bool'
int main() {
    int x = 5;
    while (x) {  // Error: x is int, not bool
        x = x - 1;
    }
    return 0;
}
